# neat-resume

./: .gitignore  Makefile  README.md  programmatic_example.py  pyproject.toml
src/neat_resume/: __init__.py  __main__.py  config.py  generator.py  resume.py  styles.py
src/neatresume/: __about__.py  __main__.py  config.py  generator.py  generator_old.py  generator_old.txt  resume.py  resume_data.py  styles.py
tests/examples/: alex_chen_resume.json  maria_garcia_resume.json  overflow_test_resume.json  sarah_johnson_resume.json
