# SPDX-FileCopyrightText: 2025-present Ricardo Rivera <silkrad@ririlabs.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neat_resume"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Ricardo Rivera", email = "silkrad@ririlabs.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "phonenumbers",
  "pycountry",
  "pydantic",
  "pydantic[email]",
  "pydantic-extra-types",
  "pydantic-yaml",
  "reportlab",
]

[project.scripts]
neat-resume = "neat_resume.__main__:main"

[project.urls]
Documentation = "https://github.com/silkrad/neat_resume#readme"
Issues = "https://github.com/silkrad/neat_resume/issues"
Source = "https://github.com/silkrad/neat_resume"

[tool.hatch.version]
path = "src/neat_resume/__about__.py"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"
dependencies = ["ruff>=0.14.0"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.18.2",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/neat_resume tests}"

[tool.coverage.run]
source_pkgs = ["neat_resume", "tests"]
branch = true
parallel = true
omit = [
  "src/neat_resume/__about__.py",
]

[tool.coverage.paths]
neat_resume = ["src/neat_resume", "*/neat_resume-tmp/src/neat_resume"]
tests = ["tests", "*/neat_resume/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 140
